--- a/src/app/componentes/mapa/mapa.component.html
+++ b/src/app/componentes/mapa/mapa.component.html
@@ -2,9 +2,9 @@
 
 <section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-8 rounded-lg shadow-2xl">
   <!-- Contenedor principal con flex -->
-  <div class="flex flex-col md:flex-row items-center lg:space-x-8">
+  <div class="flex flex-col md:flex-row items-center lg:space-x-8 justify-center">
     <!-- Contenido de texto -->
-    <div class="relative z-10 md:w-2/3 lg:w-1/2">
+    <div class="relative z-10 md:w-2/3 lg:w-1/2 text-center">
       <h2 class="text-4xl font-extrabold leading-tight mb-4">
         ¿Dónde encuentro un chivito?
       </h2>
