--- a/src/app/componentes/user/perfil/perfil.component.html
+++ b/src/app/componentes/user/perfil/perfil.component.html
@@ -1,8 +1,37 @@
 <app-navegacion></app-navegacion>
-<div class="user-panel">
-    
-    <h2>Bienvenido, {{ user?.nombre }}</h2>
-    <p>Email: {{ user?.email }}</p>
+<div class="user-panel flex flex-col items-center bg-white p-6 rounded-lg space-y-4">
+
+    <!-- Foto de perfil -->
+    <div class="relative w-24 h-24 mb-4">
+        <!-- Foto del usuario, se usa user.photo si está disponible -->
+        <img  [src]="userImage" alt="img-perfil" class="w-full h-full object-cover rounded-full border-4 border-teal-500">
+
+        <!-- Botón para cambiar foto -->
+        <button (click)="changeProfilePicture()" class="absolute bottom-0 right-0 bg-teal-500 text-white rounded-full p-2 shadow-md hover:bg-teal-600 focus:outline-none">
+            <i class="fas fa-camera-alt text-sm"></i>
+        </button>
+    </div>
   
-    <button (click)="logout()" class="logout-btn">Cerrar Sesión</button>
-  </div>
+    <!-- Nombre completo -->
+    <h2 class="text-2xl font-semibold text-teal-600">{{ user?.nombre }} {{ user?.apellido }}</h2>
+    
+    <!-- Correo -->
+    <p class="text-teal-500 text-sm">{{ user?.email }}</p>
+
+    <!-- Información adicional -->
+    <p class="text-teal-400 text-sm">Última conexión: {{ user?.lastLogin }}</p>
+  
+    <!-- Botón para cerrar sesión -->
+    <button (click)="logout()" class="logout-btn bg-teal-600 text-white py-2 px-4 rounded-lg hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-300 transition-all duration-300">
+        <i class="fas fa-sign-out-alt mr-2"></i> Cerrar Sesión
+    </button>
+</div>
+
+<!-- Botón para abrir la barra lateral -->
+<button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ml-3 text-sm text-teal-500 rounded-lg sm:hidden hover:bg-teal-200 focus:outline-none focus:ring-2 focus:ring-teal-300 transition-all duration-300">
+    <span class="sr-only">Abrir barra lateral</span>
+    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+    </svg>
+</button>
+
