--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,30 +181,30 @@
   );
 }
 
-.bg-pastelViolet {
-  background-color: #B39DDB; /* color pastel violet */
-}
-
 .bg-pastelIndigo {
-  background-color: #7986CB; /* color pastel indigo */
+  background-color: #ab47bc; /* color pastel indigo */
 }
 
 .bg-pastelBlue {
-  background-color: #64B5F6; /* color pastel blue */
+  background-color: #26c6da; /* color pastel blue */
 }
 
 .bg-pastelGreen {
-  background-color: #81C784; /* color pastel green */
+  background-color: #26a69a; /* color pastel green */
 }
 
 .bg-pastelYellow {
-  background-color: #FFEB3B; /* color pastel yellow */
+  background-color: #ffca28; /* color pastel yellow */
 }
 
 .bg-pastelOrange {
-  background-color: #FFB74D; /* color pastel orange */
+  background-color: #ff7043; /* color pastel orange */
 }
 
 .bg-pastelRed {
-  background-color: #FF8A80; /* color pastel red */
+  background-color: #ef5350; /* color pastel red */
+}
+
+.bg-pastelVioleta {
+  background-color: #7d54c4; /* color pastel violet */
 }
