--- a/src/app/componentes/admin/eventos-admin/eventos-admin.component.scss
+++ b/src/app/componentes/admin/eventos-admin/eventos-admin.component.scss
@@ -2,6 +2,17 @@ body {
     transition: background-color 0.3s, color 0.3s;
   }
 
+  input[type="color"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 9999px;
+    border: none;
+    padding: 0;
+  }
+
   form {
     padding: 1.5rem;
     border-radius: 0.5rem;
