--- a/src/app/componentes/blog/blog.component.html
+++ b/src/app/componentes/blog/blog.component.html
@@ -2,9 +2,9 @@
 
 <section class="relative bg-gradient-to-r from-teal-500 to-blue-400 text-white p-10 rounded-lg shadow-2xl">
   <!-- Contenedor principal con flex -->
-  <div class="flex flex-col md:flex-row items-center lg:space-x-8">
+  <div class="flex flex-col md:flex-row items-center lg:space-x-8 justify-center">
     <!-- Contenido de texto -->
-    <div class="relative z-10 md:w-2/3 lg:w-1/2">
+    <div class="relative z-10 md:w-2/3 lg:w-1/2 text-center">
       <h2 class="text-4xl font-extrabold leading-tight mb-4">
         Noticias y curiosidades de Uruguay y España.
       </h2>
@@ -15,30 +15,32 @@
         Regístrate
       </a>
     </div>
-
-    <!-- Imagen 
-    <div class="relative md:w-1/3 lg:w-1/2 mt-8 md:mt-0">
-      <img class="rounded-lg shadow-md lg:max-h-96 object-cover" src="assets/img/mate-primo.jpeg" alt="Eventos Uruguayos" />
-    </div>-->
   </div>
 </section>
 
-  <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 2xl:grid-cols-4 gap-8 lg:gap-6 xl:gap-4 justify-center my-20">
-    
+<div class="flex justify-center items-center">
+  <div class="grid sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 gap-8 lg:gap-6 xl:gap-4 my-20 w-full max-w-screen-xl justify-center">
+    <!-- Iteración de los blogs -->
     @for (blog of blogs; track blog.id_blog) {
-      <div class="flex flex-col bg-white shadow-lg rounded-lg overflow-hidden max-w-xs mx-auto">
-        <!-- <img [src]="blog.image" alt="Imagen de {{ blog.titulo }}" class="w-full h-48 object-cover"> -->
+      <div class="flex flex-col bg-white shadow-lg rounded-lg overflow-hidden w-full">
+        <img 
+          [src]="blog.photo || 'assets/img/default-blog.jpg'" 
+          alt="Imagen de {{ blog.titulo }}" 
+          class="w-full h-48 object-cover"
+        />
         <div class="p-6 flex flex-col justify-between h-full">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2 truncate">{{ blog.titulo }}</h3>
           <p class="text-teal-500 text-sm mb-4">{{ blog.categoria || 'Sin categoría' }}</p>
           <p class="text-gray-600 mb-4 flex-grow truncate">{{ blog.contenido }}...</p>
           <a [routerLink]="['/blog', blog.id_blog]" class="hover:text-yellow-600 text-yellow-400 font-semibold py-2 px-4 rounded-lg transition duration-300 ml-auto">
-              LEER MÁS
-            </a>
+            LEER MÁS
+          </a>
         </div>
       </div>
     }
   </div>
+</div>
+
 
 <app-footer></app-footer>
 
