--- a/src/app/componentes/calendario/calendario.component.scss
+++ b/src/app/componentes/calendario/calendario.component.scss
@@ -23,9 +23,10 @@ full-calendar {
   border-radius: 10px;
   padding: 20px;
   width: 90%;
-  max-width: 500px;
+  max-width: 600px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
   position: relative;
+  overflow: hidden;
 }
 
 .card-modal {
