--- a/src/app/componentes/navegacion/navegacion.component.html
+++ b/src/app/componentes/navegacion/navegacion.component.html
@@ -1,6 +1,6 @@
-<nav class="bg-white">
+<nav>
   <div class="mx-auto max-w-screen-2xl px-4 sm:px-6 lg:px-8">
-    <div class="relative flex h-28 items-center justify-between">
+    <div class="relative flex h-28 items-center ">
       <!-- Logo -->
       <div class="flex items-center">
         <a routerLink="/home">
@@ -25,7 +25,8 @@
         </div>
         <div class="flex items-center space-x-4">
           @if(isAdmin){
-          <a routerLink="/admin" routerLinkActive="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</a>
+          <a routerLink="/admin" routerLinkActive="bg-teal-400 text-white"
+          class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-teal-400 hover:text-white">Panel</a>
         }
 
         @if (isLoggedIn) {
@@ -52,22 +53,29 @@
         }
         <!-- Botones de Login y Registro si no está logeado -->
         @if (!isLoggedIn) {
-          <button routerLink="/login"
-                  class="bg-teal-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600">
-            Login
+          <button (click)="openModalLogin()"
+          class="bg-teal-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600">
+          Login
           </button>
-          <button routerLink="/registro"
+          @if(showLoginModal) {
+          <app-login></app-login>
+        }
+          <button (click)="openModalRegistro()"
                   class="bg-yellow-400 text-white rounded-md px-3 py-2 text-sm font-medium hover:bg-teal-600">
             Registro
           </button>
+          @if(showRegistroModal){
+            <app-registro></app-registro>
+          }
         }
         </div>
       </div>
+  
       <!-- Mobile Menu Button -->
       <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
         <button
           (click)="toggleMobileMenu()"
-          class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
+          class="inline-flex items-center justify-center rounded-md p-2 text-yellow-400 hover:bg-yellow-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
           <span class="sr-only">Open main menu</span>
           <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" aria-hidden="true">
@@ -83,6 +91,7 @@
   @if (!isMobileMenuOpen) {
   }
   @if (isMobileMenuOpen) {
+    <div class="fixed inset-0 bg-black bg-opacity-50 z-40">
     <div class="md:hidden block">
       <div class="space-y-1 px-2 pb-3 pt-2">
         <a routerLink="/home" routerLinkActive="bg-teal-600 text-white"
@@ -143,5 +152,7 @@
         }
       </div>
     </div>
+    </div>
   }
+
 </div>
