--- a/src/app/componentes/user/login/login.component.html
+++ b/src/app/componentes/user/login/login.component.html
@@ -1,3 +1,6 @@
+@if (isModalOpen) {
+
+<div class="fixed inset-0 bg-black bg-opacity-50 z-40">
 <div class="flex items-center justify-center min-h-screen login-container">
     <div class="bg-yellow-100 border-2 border-yellow-300 rounded-lg shadow-lg p-8 w-full max-w-md z-10">
       <div class="flex justify-center mb-6">
@@ -52,5 +55,10 @@
           <a href="/registro" class="text-teal-400 hover:underline">Crear cuenta</a>
         </p>
       </div>
+      <button (click)="closeModal()" class="absolute top-2 right-2 text-xl text-gray-500">
+        &times;
+      </button>
     </div>
 </div>
+</div>
+}
